# guild-wars2-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  guildwars2_sdk.py  guildwars2_types.py  pyproject.toml
py/core/: context.py  control.py  response.py  spec.py  utility_type.py
py/entity/: achievement_entity.py  authenticated_entity.py  daily_reward_entity.py  game_mechanic_entity.py  guild_authenticated_entity.py  guild_entity.py  home_instance_entity.py  item_entity.py  map_entity.py  map_information_entity.py  miscellaneous_entity.py  story_entity.py  structured_pv_p_entity.py  trading_post_entity.py  world_vs_world_entity.py
py/feature/: audit_feature.py  cache_feature.py  clienttrack_feature.py  debug_feature.py  idempotency_feature.py  log_feature.py  metrics_feature.py  netsim_feature.py  proxy_feature.py  ratelimit_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_achievement_direct.py  test_achievement_entity.py  test_authenticated_direct.py  test_authenticated_entity.py  test_daily_reward_direct.py  test_daily_reward_entity.py  test_exists.py  test_feature.py  test_game_mechanic_direct.py  test_game_mechanic_entity.py  test_guild_authenticated_direct.py  test_guild_authenticated_entity.py  test_guild_direct.py  test_guild_entity.py  test_home_instance_direct.py  test_home_instance_entity.py  test_item_direct.py  test_item_entity.py  test_map_direct.py  test_map_entity.py  test_map_information_direct.py  (+15 more)
(+709 files in other folders)
